# mcc

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  lexer.c  lexer.h  main.c  string_view.h
mcc/: CMakeLists.txt  arena.c  arena.h  ast.h  ast_printer.c  cli_args.c  cli_args.h  diagnostic.c  diagnostic.h  gen_ir.c  gen_ir.h  ir.c  ir.h  ir_generator.c  ir_printer.c  lexer.c  lexer.h  main.c  parser.c  parser.h  source_location.h  string_view.c  string_view.h  token.c  token.h  x86.h  x86_generator.c  x86_printer.c
mcc/frontend/: ast_printer.c  lexer.c  token.c
mcc/ir/: ir_generator.c
mcc/utils/: allocators.c  allocators.h  arena.c  arena.h  arena_vm.c  cli_args.c  defer.h  diagnostic.c  format.c  format.h  prelude.h  str.c  str.h
src/: CMakeLists.txt  main.c
src/frontend/: ast_printer.c  lexer.c  line_numbers.c  parser.c  symbol_table.c  symbol_table.h  token.c  type.c  type_check.c
src/ir/: ir_generator.c  ir_printer.c
src/utils/: arena.c  arena_vm.c  cli_args.c  diagnostic.c  format.c  hash_table.c  str.c
src/x86/: x86.c  x86_fix_instructions.c  x86_from_ir.c  x86_generator.c  x86_helpers.c  x86_helpers.h  x86_passes.h  x86_printer.c  x86_replace_pseudos.c  x86_symbols.c  x86_symbols.h
test/: CMakeLists.txt  README.md  arena_test.cpp  ast_printer.cpp  ast_printer.hpp  ast_printer_test.cpp  cstring_view_format.hpp  integration_test.cpp  ir_printer.cpp  ir_printer.hpp  lexer_test.cpp  main.cpp  parser_test.cpp  source_location_formatter.hpp  test_driver.py
test/approval_test/: lexer_test.Lexer_test.Arithmetics.approved.txt  lexer_test.Lexer_test.minimum_source.approved.txt
test/approval_tests/: lexer_test.minimum_source.approved.txt
test/snapshot_tests/: test_driver.py
test/snapshot_tests/simple_return/: file.asm
test/test-driver/: Cargo.toml
test/test-driver/src/: global_configuration.rs  main.rs  state.rs  test_database.rs  tests_detector.rs
test/test_data/assignment/: assign_in_init.c  assignment.c  assignment_val_init.c  precedence.c
test/test_data/assignment/failed/: assign_to_rvalue.c  assign_to_rvalue.stderr.approved.txt  assign_to_rvalue2.c  assign_to_rvalue2.stderr.approved.txt
test/test_data/basics/arithmetics/: associativity.c  associativity_3.c  associativity_and_precedence.c  binary_op_1.c  binary_op_mult.c  div_2.c  precedence_1.c  precedence_2.c
test/test_data/basics/bitwise/: bitwise_and.c  bitwise_complement.c  bitwise_xor.c  or.c  precedence.c  shift_precedence.c  shiftl.c  shiftr_negative.c  xor.c
test/test_data/basics/comparison/: associativity.c  compare_arithmetic_results.c  eq_false.c  gt_true.c  ne_false.c  ne_true.c
test/test_data/basics/logical/: and.c  and_false.c  multi_short_circuit.c  not.c  not_zero.c  or_short_circuit.c  precedence2.c
test/test_data/basics/simple_operators/: group.c  unary_ops_2.c
test/test_data/basics/simple_return/: return_42.c
test/test_data/failed_lexing/: dollar.c  test_config.toml
test/test_data/failed_parsing/: bad1.approved.txt  bad2.approved.txt  bad2.c  bitwise_double_operator.c  bitwise_double_operator.stderr.approved.txt  declaration_as_statement.stderr.approved.txt  double_operation.stderr.approved.txt  empty_if_body.c  end_before_expr.stderr.approved.txt  extra_junk.stderr.approved.txt  extra_paren.stderr.approved.txt  if_assignment.stderr.approved.txt  if_no_parens.c  imbalanced_paren.stderr.approved.txt  invalid_function_name.stderr.approved.txt  keyword_wrong_case.stderr.approved.txt  malformed_paren.stderr.approved.txt  misplaced_semicolon.stderr.approved.txt  missing_const.stderr.approved.txt  missing_first_op.stderr.approved.txt  missing_first_op_2.stderr.approved.txt  missing_open_paren.stderr.approved.txt  missing_operand.stderr.approved.txt  missing_second_op.stderr.approved.txt  missing_second_op_2.stderr.approved.txt  missing_semicolon.stderr.approved.txt  missing_type.stderr.approved.txt  misspelled_keyword.stderr.approved.txt  multiple_else.c  multiple_else.stderr.approved.txt  no_parameter.stderr.approved.txt  no_semicolon.stderr.approved.txt  no_semicolon_2.c  no_semicolon_2.stderr.approved.txt  not_expression.stderr.approved.txt  parenthesize_operand.stderr.approved.txt  space_in_keyword.stderr.approved.txt  switched_parens.stderr.approved.txt  test_config.toml  unary_missing_semicolon.stderr.approved.txt  (+4 more)
test/test_data/functions/: empty_main.c  empty_stmt_in_main.c
test/test_data/if/: if_else_if.c  if_false.c  if_nested_1.c  multiple_ifs.c
test/test_data/if/failed/: decl_in_if.c  decl_in_if.stderr.approved.txt  invalid_var_in_if.c  invalid_var_in_if.stderr.approved.txt  test_config.toml
test/test_data/simple_arithmatics/: arithmatics.approved.txt  arithmatics.c
test/test_data/simple_return/: return_0.approved.txt  return_42.approved.txt  return_42.c
test/test_data/ternary/: assign_from_ternary.c  ternary_assign_first_branch.c  ternary_precedence.c  ternary_rhs_binop.c
test/test_data/ternary/failed/: invalid_var.stderr.approved.txt  ternary_assign.stderr.approved.txt
test/test_data/variables/: add_var.c  return_var.c  use_in_inner.c
test/test_data/variables/failed/: declare_after_use.c  declare_after_use.stderr.approved.txt  local_redefinition.c  local_redefinition.stderr.approved.txt  redefinition.stderr.approved.txt  redefinition_after_scope.c  redefinition_after_scope.stderr.approved.txt  redefinition_inner.stderr.approved.txt  undeclared_identifier.stderr.approved.txt  use_before_decl.stderr.approved.txt  use_before_decl_2.stderr.approved.txt  (+2 more)
test/test_driver/: Cargo.toml
test/test_driver/src/: global_configuration.rs  main.rs  snapshot_testing.rs  test_configuration.rs  test_reporter.rs  test_runner.rs
test/unit_tests/: CMakeLists.txt  arena_test.cpp  arenas.cpp  dynarray_test.cpp  formatting_test.cpp  lexer_test.cpp  line_numbers_test.cpp  string_test.cpp
test/utils_test/: allocator_test.cpp  arena_test.cpp  formatting_test.cpp  string_test.cpp
tests/test_driver/: Cargo.toml
tests/test_driver/src/: test_configuration.rs  test_detector.rs  test_reporter.rs  test_runner.rs
(+238 files in other folders)
