[package]
name = "mcc-test-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0.216", features = ["derive"] }
colored = "2"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["process", "rt", "rt-multi-thread", "fs"] }